# QTNaremeWithSemaphores

./: CMakeLists.txt  README.md  buffer.cpp  buffer.h  consumer.cpp  consumer.h  main.cpp  producer.cpp  producer.h  productor.cpp  productor.h
